feat: enhance SAML login tests to support multiple button selectors for different SimpleSAMLphp versions